# src/routes/person.ts
@@ -12,4 +12,6 @@ router.post(
   Controllers.Person.register
 );
 
+router.get("/search", Controllers.Person.searchPerson);
+
 export default router;
